# FarmerTemplate

./: .gitignore  CMakeLists.txt  builder.sh
src/: main.cpp
src/objects/: Values.cpp  Values.h
src/util/: AbstractTree.h  Block.h  CharSeq.cpp  CharSeq.h  CharStream.cpp  CharStream.h  IndexUtil.h  IndexedStream.h
